# Hospitals

./: .gitignore  CMakeLists.txt  README.md  Specjalizacje.txt  main.cpp
GUI/: initial_setting.json  main.py
include/: Ambulance.hpp  Configuration_data.hpp  GUI.hpp  Hospital.hpp  Patient.hpp  city.hpp  structures.hpp  tabu.hpp  window.hpp
scr/: structures.cpp  tabu.cpp  window.cpp
src/: Ambulance.cpp  Configuration_data.cpp  GUI.cpp  Patient.cpp  city.cpp  structures.cpp  tabu.cpp  window.cpp
